# NiceFormatter

./: CMakeLists.txt  Format.cpp  Format.h  Format.tpp  FormatArgsMerger.cpp  FormatArgsMerger.h  FormatArgsMerger.tpp  FormatPrinter.cpp  FormatPrinter.h  FormatPrinter.tpp  InvalidFormat.cpp  Invalid_format.cpp  Invalid_format.h  PlaceholderPosition.cpp  PlaceholderPosition.h  README.md  Token.h
cmake/: FetchCatchFromGit.cmake
docs/: manual.md
execute/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Format.h  Format.tpp  FormatArgsMerger.cpp  FormatArgsMerger.h  FormatArgsMerger.tpp  InvalidFormat.h  PlaceholderPosition.cpp  PlaceholderPosition.h  Token.cpp  Token.h  Tokenization.cpp  Tokenization.h
tests/: CMakeLists.txt  test-empty-placeholders.cpp  test-format-number.cpp  test-invalid.cpp  test-main.cpp  test-spacing-left-right.cpp
